macros/tests/trybuild/extern_crate.rs
use serde_args_macros::help;

#[help]
extern crate core;

fn main() {}
